--- a/ch1. 웹브라우저가 메세지를 만든다/1-4.md
+++ b/ch1. 웹브라우저가 메세지를 만든다/1-4.md
@@ -11,20 +11,20 @@ IP주소로 메세지를 송신하도록 OS 내부의 프로토콜 스택에 의
 # 2. 소켓의 작성 단계
 
 클라이언트가 소켓라이브러리의 socket을 호출 --> 소켓을 만듬  
-이때 소켓에는 디스크럽터라는 번호표가 부여됨.  
+이때 소켓에는 디스크립터라는 번호표가 부여됨.  
 
 # 3. 파이프를 연결하는 접속 단계
 Socket라이브러리의 connect라는 프로그램 부품을 호출해서, 서버측 소켓에 접속하도록 함.  
 
-이떄 디스크럽터, ip주소, 포트번호 세가지가 필요.  
+이떄 디스크립터, ip주소, 포트번호 세가지가 필요.  
 
-ip주소는 컴퓨터를 특정, 포트는 소통할 소켓 특정. 디스크럽터는 시작할 소켓을 특정.  
+ip주소는 컴퓨터를 특정, 포트는 소통할 소켓 특정. 디스크립터는 시작할 소켓을 특정.  
 연결되면, 프로토콜 스택이 소켓에 위 2가지 정보 기록.  
 송수신가능한상태됨.  
 
 # 4. 메시지를 주고받는 송수신단계. 
 
-프로토콜 스택이 wrute를 사용해 데이터를 보냄.  
+프로토콜 스택이 write를 사용해 데이터를 보냄.  
 
 이때 송신데이터와 디스크립터를 지정.  
 
