--- a/ch2-TCP_IP의 데이터를 전기 신호로 만들어 보낸다/2-1.md
+++ b/ch2-TCP_IP의 데이터를 전기 신호로 만들어 보낸다/2-1.md
@@ -16,7 +16,7 @@
 
 ### 6. UDP 프로토콜
 
-## 1. 소켓을 작성한다.
+## Story 1. 소켓을 작성한다.
 
 ### (1) 프로토콜 스택의 내부 구성
 
@@ -59,5 +59,3 @@
 디스크립터를 받은 애플리케이션은 프로토콜 스택에 송수신을 의뢰할 때 디스크립터를 통지합니다.
 
 프로토콜 스택은 어느 소켓인지만 알면 필요한 정보를 모두 알 수 있기 때문에 일일이 통신 상대의 정보를 통지받을 필요가 없어집니다.
-
-### test2
